--- a/src/index.css
+++ b/src/index.css
@@ -3,3 +3,9 @@
 @tailwind utilities;
 @import url('https://fonts.googleapis.com/css2?family=DM+Serif+Display&family=Public+Sans&display=swap');
 
+body {
+    font-family: var(--body-font-family);
+    font-weight: var(--body-font-weight);
+    background-color: var(--body-bg-color);
+    font-size: 15px;
+}
