--- a/src/variables.css
+++ b/src/variables.css
@@ -8,8 +8,19 @@
     --mirage-blue:rgb(27, 38, 47);
     --charm-pink:rgb(218, 109, 151);
 
+    --body-bg-color: #EDF3F8;
+
+    /* fonts */
+
     --heading-font-family: 'DM Serif Display', serif;
     --heading-font-weight: 400;
     --body-font-family: 'Public Sans', sans-serif;
     --body-font-weight: 400;
+
+    --page-margin-x: 20px;
+
+
+    /* font size */
+    --m-big-heading: 32px;
+    --m-heading: 18px;
 }
