--- a/src/variables.css
+++ b/src/variables.css
@@ -3,6 +3,7 @@
     --primary-pink:rgb(186, 66, 112);
     --primary-white:rgb(251, 252, 254);
 
+    --gray: #B8BCC0;
     --blue:rgb(54, 83, 107);
     --light-blue:rgb(108, 130, 148);
     --mirage-blue:rgb(27, 38, 47);
