--- a/src/index.css
+++ b/src/index.css
@@ -8,4 +8,9 @@ body {
     font-weight: var(--body-font-weight);
     background-color: var(--body-bg-color);
     font-size: 15px;
+    overflow-x: hidden;
+}
+
+html {
+    overflow-x: hidden;
 }
