--- a/src/Home.css
+++ b/src/Home.css
@@ -1,4 +1,3 @@
-
 .start-section .img-wrapper img {
     @apply mx-auto;
     width: 128px;
@@ -31,11 +30,13 @@
     display: grid;
     grid-template-columns: 50% 50%;
     grid-template-rows: var(--logo-height);
-    column-gap: 10px;
-    row-gap: 15px;
+    column-gap: 20px;
+    row-gap: 45px;
+    max-width: 350px;
+    margin: auto;
 }
 .logos>div {
-    @apply flex justify-center items-center;
+    @apply flex justify-start items-center;
 }
 
 .business-allies {
