--- a/src/Home.css
+++ b/src/Home.css
@@ -148,3 +148,9 @@
 .email-section {
     @apply home-margin-between-sections
 }
+
+@media screen and (min-width: 768px) {
+    .big-heading {
+        font-size: var(--t-home-big-heading);
+    }
+}
