--- a/src/variables.css
+++ b/src/variables.css
@@ -33,7 +33,7 @@
     --m-home-heading: 18px;
     --t-home-big-heading: 48px;
     --t-home-heading: 18px;
-
+    --d-home-main-heading: 72px;
     --m-page-margin-y: 30px;
     --m-page-margin-x: 30px;
 }
