--- a/src/variables.css
+++ b/src/variables.css
@@ -36,4 +36,6 @@
     --d-home-main-heading: 72px;
     --m-page-margin-y: 30px;
     --m-page-margin-x: 30px;
+
+    --max-width-home-desktop: 1000px;
 }
