--- a/src/App.css
+++ b/src/App.css
@@ -98,7 +98,12 @@ footer::after {
     }
 }
 
-@media screen and (min-width: 1024px) {
-    
-    
+@media screen and (min-width: 1248px) {
+    header {
+        @apply mx-auto;
+        max-width: var(--max-width-home-desktop);
+    }
+    header.page-margin-x {
+        @apply mx-auto;
+    }
 }
