--- a/src/variables.css
+++ b/src/variables.css
@@ -15,7 +15,7 @@
     --lighter-blue: #D2DBE3;
     --dark-blue: #657C8F;
     --light-mirage-blue: #1F2D38;
-
+    --smoke-gray: #404B56;
     /* fonts */
 
     --heading-font-family: 'DM Serif Display', serif;
