--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,9 @@
+.scroll-lock {
+    position: fixed;
+    width: 100%;
+
+}
+
 header {
     margin-top: var(--m-page-margin-y);
 }
@@ -57,15 +63,15 @@ footer::after {
 .header__show-hide-menu--hide-menu {
     background-image: url("./assets/shared/mobile/close.svg");
 }
-.header__link-list {
+.header__link-list-mobile {
     @apply pt-28;
     display: flex;
     flex-direction: column;
 }
-.header__link {
+.header__link-mobile {
     @apply mb-4;
 }
-.header__nav {
+.header__nav-mobile {
     position: absolute;
     height: 100vh;
     background-color: var(--mirage-blue);
@@ -77,7 +83,7 @@ footer::after {
     text-align: center;
     z-index: 100;
 }
-.header__nav::before {
+.header__nav-mobile::before {
     content: "";
     height: 1px;
     width: calc(100% - (var(--m-page-margin-x) * 2));
@@ -87,12 +93,21 @@ footer::after {
     left: 50%;
     transform: translate(-50%, 0);
 }
-.header__schedule-button {
+.header__schedule-button-mobile {
     @apply inline-block rounded-full font-bold py-2 px-6;
     background: var(--primary-pink);
     color: white;
 }
+.header__nav {
+    display: none;
+}
 @media screen and (min-width: 768px) {
+    .header__nav-mobile {
+        display: none;
+    }
+    .header__show-hide-menu {
+        display: none;
+    }
     .header__nav {
         @apply flex-1;
         display: flex;
@@ -110,9 +125,7 @@ footer::after {
         background: var(--primary-pink);
         color: white;
     }
-    .show-hide-menu {
-        display: none;
-    }
+  
 
     .footer__content-wrapper {
         display: flex;
