--- a/src/index.css
+++ b/src/index.css
@@ -7,6 +7,13 @@
     margin-left: var(--m-page-margin-x);
     margin-right: var(--m-page-margin-x);
 }
+.email-section__heading {
+    @apply leading-tight;
+    font-size: var(--m-big-heading);
+    font-family: var(--heading-font-family);
+    text-align: center;
+    color: var(--blue);
+}
 .page-padding-x {
     padding-left: var(--m-page-margin-x);
     padding-right: var(--m-page-margin-x);
@@ -23,4 +30,10 @@ body {
 
 html {
     overflow-x: hidden;
+}
+
+@media screen and (min-width: 768px) {
+    .email-section__heading {
+        font-size: var(--t-home-big-heading)
+    }
 }
