home business align

--- a/src/Home.css
+++ b/src/Home.css
@@ -243,7 +243,8 @@
         flex-direction: row-reverse;
     }
     .business-allies__text {
-        margin: auto;
+        margin-left: 0;
+        margin-right: auto;
         text-align: left;
     }
     .business-allies__text > .big-heading {
