--- a/src/index.css
+++ b/src/index.css
@@ -64,12 +64,25 @@ html {
     font-weight: bold;
     color: var(--primary-white);
 }
+
+.page-heading {
+    @apply my-12 leading-tight;
+    font-size: var(--m-pricing-page__heading--font-size);
+    font-family: var(--heading-font-family);
+    color: var(--blue);
+    text-align: center;
+    position: relative;
+    z-index: 10;
+}
 .btn--pink-filled {
     background: var(--primary-pink);
     color: white;
     font-weight: bold;
 }
 @media screen and (min-width: 768px) {
+    .page-heading {
+        font-size: var(--t-pricing-page__heading--font-size);
+    }
     .email-section__heading {
         font-size: var(--t-home-big-heading)
     }
@@ -87,6 +100,10 @@ html {
     }
 }
 @media screen and (min-width: 1248px) {
+    .page-heading {
+        font-size: var(--d-pricing-page__heading--font-size);
+        text-align: left;
+    }
     .page-margin-x {
         @apply mx-auto;
         max-width: 1000px;
