--- a/src/variables.css
+++ b/src/variables.css
@@ -59,5 +59,8 @@
 
     --d-about-page-section-max-width: 800px;
     
+
+    /* contacts */
+    --business-allies-contacts__heading--font-size: 24px;
     --max-width-home-desktop: 1000px;
 }
